card list endpoint working

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ psycopg2-binary = "*"
 django-heroku = "*"
 gunicorn = "*"
 whitenoise = "*"
+django-extensions = "*"
+djangorestframework = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
