--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ django-extensions = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
+djoser = "*"
+stream-chat = "*"
 
 [requires]
 python_version = "3.8"
