--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-extensions = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.8"
